m3-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m3-mobiles-db-deployment
  labels:
    app: m3-mobiles-db

spec:
  replicas: 1
  selector:
    matchLabels:
      app: m3-mobiles-db
  template:
    metadata:
      labels:
        app: m3-mobiles-db
    spec:
      volumes:
        - name: m3-mobiles-db-vol
          hostPath:
            path: /home/docker/m3mobiles/database
      containers:
        - name: m3-mobiles-db
          image: postgres:alpine
          volumeMounts:
            - name: m3-mobiles-db-vol
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: m3-mobiles-db-service
spec:
  selector:
    app: m3-mobiles-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
