m3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m3-mobiles-deployment
  labels:
    app: m3-mobiles

spec:
  replicas: 1
  selector:
    matchLabels:
      app: m3-mobiles
  template:
    metadata:
      labels:
        app: m3-mobiles
    spec:
      volumes:
        - name: m3-mobiles-assets-vol
          hostPath:
            path: /home/docker/m3mobiles/assets
        - name: m3-mobiles-media-vol
          hostPath:
              path: /home/docker/m3mobiles/media
      containers:
        - name: m3-mobiles
          image: amjedsaleel/m3mobiles
          volumeMounts:
            - name: m3-mobiles-assets-vol
              mountPath: /app/assets
            - name: m3-mobiles-media-vol
              mountPath: /app/media
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: m3-mobiles-service
spec:
  selector:
    app: m3-mobiles
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
