ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m3-mobiles-ingress
  namespace: default
spec:
  rules:
  - host: "m3mobiles.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: m3-mobiles-service
            port:
              number: 8080
